add 2nd hw and correct 1st hw

--- a/1_git_jupyter_basic_operations/homework1.ipynb
+++ b/1_git_jupyter_basic_operations/homework1.ipynb
@@ -14,18 +14,18 @@
     "3) NB! Все домашки сдаем в отдельных папках в тетрадках с ЯСНЫМИ НАЗВАНИЯМИ. Название папки - 1 цифра, обозначающая номер домашнего задания\n",
     "\n",
     "Вот пример хорошей структуры репозитория для ДЗ\n",
-    "\n",
+    "```\n",
     "LyceumHSE_DA_hw/\n",
     "├── 1/\n",
     "│   ├── jupyter_screen.png\n",
-    "│   └── hw1_solution.ipynb\n",
+    "│   └── hw1.ipynb\n",
     "├── 2/\n",
-    "│   └── hw2_task2_model_metrics.ipynb\n",
+    "│   └── hw2.ipynb\n",
     "├── 3/\n",
-    "│   └── hw3_classes.ipynb\n",
+    "│   └── hw3.ipynb\n",
     "└── 4/\n",
-    "    └── hw4_solution.ipynb\n",
-    "\n",
+    "    └── hw4.ipynb\n",
+    "```\n",
     "**Задача 1:** поместить в репозиторий скриншот из командной строки, который подтверждает, что у вас установлен jupyter notebook. Про формат jupyter и как его установить можно [почитать здесь](https://practicum.yandex.ru/blog/chto-takoe-jupyter-notebook/), это такая среда для представления кода. Эта домашка тоже сделана в jupyter ноутбуке =)\n",
     "\n",
     "**Задача 2:**  поместить в репозиторий jupyter-тетрадь, в которой вы\n",
